I put seniors' names

--- a/about.html
+++ b/about.html
@@ -42,16 +42,16 @@
                 <h2>Tharakesh Suresh</h2>
              </div>
              <div class="person">
-                <h2>Vedant</h2>
+                <h2>Vedant Shah</h2>
              </div>
              <div class="person">
-                <h2>Other senior</h2>
+                <h2>Sarang Praveen</h2>
              </div>
              <div class="person">
                 <h2>Sai Janarthanan</h2>
              </div>
              <div class="person">
-                <h2>Samarth Sunil Shinde</h2>
+                <h2>Samarth Shinde</h2>
              </div>
          </div>
     </main>
